--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="..\..\..\Core\System\DataBinding\BindingMode.h" />
     <ClInclude Include="..\..\..\Core\System\DataBinding\Converters\IValueConverter.h" />
     <ClInclude Include="..\..\..\Core\System\DataBinding\DependencyObject.h" />
+    <ClInclude Include="..\..\..\Core\System\DataBinding\Expressions\AncestorBindingExpression.h" />
     <ClInclude Include="..\..\..\Core\System\DataBinding\Expressions\BindingExpression.h" />
     <ClInclude Include="..\..\..\Core\System\DataBinding\Expressions\DefaultBindingExpression.h" />
     <ClInclude Include="..\..\..\Core\System\DataBinding\Validators\IValueValidator.h" />
@@ -199,6 +200,7 @@
     <ClCompile Include="..\..\..\Core\Controls\IControl.cpp" />
     <ClCompile Include="..\..\..\Core\Controls\UIElement.cpp" />
     <ClCompile Include="..\..\..\Core\System\DataBinding\DependencyObject.cpp" />
+    <ClCompile Include="..\..\..\Core\System\DataBinding\Expressions\AncestorBindingExpression.cpp" />
     <ClCompile Include="..\..\..\Core\System\DataBinding\Expressions\BindingExpression.cpp" />
     <ClCompile Include="..\..\..\Core\System\DataBinding\Expressions\DefaultBindingExpression.cpp" />
     <ClCompile Include="..\..\..\Core\System\Events\EventHandlers.cpp" />
