--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj.filters
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj.filters
@@ -296,6 +296,7 @@
     <ClCompile Include="..\..\..\Core\System\DataBinding\Expressions\BindingExpression.cpp">
       <Filter>Core\System\DataBinding\Expressions</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\Core\System\DataBinding\Binding.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\Core\System\Events\EventsSystem.inl">
