--- a/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj.filters
+++ b/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj.filters
@@ -34,6 +34,9 @@
     <ClCompile Include="..\..\..\..\Tests\TestBindings\TestExpressions\TestAncestorBindingExpression.cpp">
       <Filter>TestExpressions</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Tests\TestBindings\TestBindings\TestBinding.cpp">
+      <Filter>TestExpressions</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Tests\TestBindings\Classes\Animal.h">
