--- a/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj.filters
+++ b/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj.filters
@@ -35,7 +35,7 @@
       <Filter>TestExpressions</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\Tests\TestBindings\TestBindings\TestBinding.cpp">
-      <Filter>TestExpressions</Filter>
+      <Filter>TestBindings</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
