--- a/ProjectDir/Visual2015/TestFramework/TestFramework.vcxproj
+++ b/ProjectDir/Visual2015/TestFramework/TestFramework.vcxproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\TestFramework\stdafx.h" />
     <ClInclude Include="..\..\..\TestFramework\targetver.h" />
+    <ClInclude Include="..\..\..\TestFramework\Testers\Bindings\TesterBinding.h" />
     <ClInclude Include="..\..\..\TestFramework\Testers\Window\HostWindowTester.h" />
     <ClInclude Include="..\..\..\TestFramework\TestFramework.h" />
     <ClInclude Include="..\..\..\TestFramework\Utils\ClassesUI\SubclassTestElement.h" />
