--- a/ProjectDir/Visual2015/TestFramework/TestFramework.vcxproj
+++ b/ProjectDir/Visual2015/TestFramework/TestFramework.vcxproj
@@ -25,6 +25,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="..\..\..\TestFramework\Testers\Bindings\TesterBinding.cpp" />
     <ClCompile Include="..\..\..\TestFramework\Testers\Window\HostWindowTester.cpp" />
     <ClCompile Include="..\..\..\TestFramework\TestFramework.cpp" />
     <ClCompile Include="..\..\..\TestFramework\Utils\ClassesUI\TestUIElementClass.cpp" />
