--- a/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj.filters
+++ b/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj.filters
@@ -7,6 +7,9 @@
     <Filter Include="TestExpressions">
       <UniqueIdentifier>{d023e6ee-0804-4dd1-b9ea-2b0470984636}</UniqueIdentifier>
     </Filter>
+    <Filter Include="TestDependencyObject">
+      <UniqueIdentifier>{c4b53f51-73b6-4021-aa54-dfe92e1e8a73}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\Tests\TestBindings\main.cpp" />
@@ -27,6 +30,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\..\Tests\TestBindings\TestBindings\TestBindingCompatibility.cpp">
       <Filter>TestBindings</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\Tests\TestBindings\TestDependencyObject\TestDependencyObjectBinding.cpp">
+      <Filter>TestDependencyObject</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
