[Test] Binding to source compatibil and oposite direction + binding creation helpers

--- a/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj.filters
+++ b/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj.filters
@@ -34,5 +34,8 @@
     <ClCompile Include="..\..\..\..\Tests\TestBindings\TestDependencyObject\TestDependencyObjectBinding.cpp">
       <Filter>TestDependencyObject</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Tests\TestBindings\TestDependencyObject\TestPropagation.cpp">
+      <Filter>TestDependencyObject</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
