--- a/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj
+++ b/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="..\..\..\..\Tests\TestBindings\TestBindings\TestBinding.cpp" />
     <ClCompile Include="..\..\..\..\Tests\TestBindings\TestBindings\TestBindingCompatibility.cpp" />
     <ClCompile Include="..\..\..\..\Tests\TestBindings\TestDependencyObject\TestDependencyObjectBinding.cpp" />
+    <ClCompile Include="..\..\..\..\Tests\TestBindings\TestDependencyObject\TestPropagation.cpp" />
     <ClCompile Include="..\..\..\..\Tests\TestBindings\TestExpressions\TestAncestorBindingExpression.cpp" />
     <ClCompile Include="..\..\..\..\Tests\TestBindings\TestExpressions\TestDefaultBindingExpression.cpp" />
     <ClCompile Include="..\..\..\..\Tests\TestBindings\TestExpressions\TestPathEvaluation.cpp" />
