--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="..\..\..\Core\Media\Brushes\LinearGradient.h" />
     <ClInclude Include="..\..\..\Core\Media\Brushes\RadialGradient.h" />
     <ClInclude Include="..\..\..\Core\Media\Brushes\SolidColorBrush.h" />
+    <ClInclude Include="..\..\..\Core\Media\Geometry\Geometry.h" />
     <ClInclude Include="..\..\..\Core\Media\Media.h" />
     <ClInclude Include="..\..\..\Core\System\CommonTypes\AccessKey.h" />
     <ClInclude Include="..\..\..\Core\System\CommonTypes\CommonTypes.h" />
@@ -187,6 +188,9 @@
     <ClInclude Include="..\..\..\Core\System\HostLogic.h" />
     <ClInclude Include="..\..\..\Core\System\HostWindow.h" />
     <ClInclude Include="..\..\..\Core\System\Rendering\DrawingContext.h" />
+    <ClInclude Include="..\..\..\Core\System\Rendering\Drawings\DrawingGroup.h" />
+    <ClInclude Include="..\..\..\Core\System\Rendering\Drawings\Drawing.h" />
+    <ClInclude Include="..\..\..\Core\System\Rendering\Drawings\IDrawing.h" />
     <ClInclude Include="..\..\..\Core\System\Rendering\RenderingSystem.h" />
     <ClInclude Include="..\..\..\Core\System\Time\Clock.h" />
     <ClInclude Include="..\..\..\Core\System\Time\FrameTime.h" />
