Brush interface project

--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj.filters
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj.filters
@@ -246,6 +246,9 @@
     <ClInclude Include="..\..\..\Core\System\Rendering\Drawings\DrawingGroup.h">
       <Filter>Core\System\Rendering\Drawings</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\Core\System\Rendering\Drawings\GeometryDrawing.h">
+      <Filter>Core\System\Rendering\Drawings</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\Core\Controls\IControl.cpp">
