--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
@@ -190,6 +190,7 @@
     <ClInclude Include="..\..\..\Core\System\Rendering\DrawingContext.h" />
     <ClInclude Include="..\..\..\Core\System\Rendering\Drawings\DrawingGroup.h" />
     <ClInclude Include="..\..\..\Core\System\Rendering\Drawings\Drawing.h" />
+    <ClInclude Include="..\..\..\Core\System\Rendering\Drawings\GeometryDrawing.h" />
     <ClInclude Include="..\..\..\Core\System\Rendering\Drawings\IDrawing.h" />
     <ClInclude Include="..\..\..\Core\System\Rendering\RenderingSystem.h" />
     <ClInclude Include="..\..\..\Core\System\Time\Clock.h" />
