--- a/ProjectDir/Visual2015/Tests/TestGUISystem/TestGUISystem.vcxproj.filters
+++ b/ProjectDir/Visual2015/Tests/TestGUISystem/TestGUISystem.vcxproj.filters
@@ -22,5 +22,8 @@
     <ClCompile Include="..\..\..\..\Tests\TestGUISystem\TestMouseEvents.cpp">
       <Filter>TestGUISystem</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Tests\TestGUISystem\TestPathsManager.cpp">
+      <Filter>TestGUISystem</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
