--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj.filters
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj.filters
@@ -264,6 +264,9 @@
     <ClInclude Include="..\..\..\Core\System\Config\PathsManager.h">
       <Filter>Core\System\Config</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\Core\System\Rendering\Shading\ShaderProvider.h">
+      <Filter>Core\System\Rendering\Shading</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\Core\Controls\IControl.cpp">
@@ -367,6 +370,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\Core\System\Config\PathsManager.cpp">
       <Filter>Core\System\Config</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Core\System\Rendering\Shading\ShaderProvider.cpp">
+      <Filter>Core\System\Rendering\Shading</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
